# ai-agent-mvp

./: .gitignore  .ports.env  README.md  run.sh
backend/: agent.py  main.py  pyproject.toml  schemas.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: ChatWindow.tsx  MessageInput.tsx  ThemeToggle.tsx  ToolCallCard.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/styles/: globals.css
tutorial/: 01-overview.md  02-backend-fastapi.md  03-backend-agent-loop.md  04-backend-tools.md  05-frontend-streaming.md  06-frontend-components.md  07-full-flow-example.md  README.md
workspace/: example.py  sample.txt
workspace/data/: config.json
